# recmeet

./: .gitignore  .gitmodules  .vibe-vault.toml  AUTHORS  BUILD.md  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  QUICKSTART.md  README.md  agent-bootstrap.sh  grok_meeting_recorder.py  pyproject.toml  recmeet.py  recmeet_tray.py
.claude/commands/: restart.md  resume.md  wrap.md
.github/workflows/: test.yml
.vibe-vault/: last-tasks-snapshot.json
assets/: biden_trump_debate_2020.md
bench-results/phase-a/: centroids_short_2026-05-05_10-52.json  centroids_short_2026-05-18_08-37.json  centroids_t2-1.json
bench-results/phase-d/: 05-57_speakers_postfix.json  bench-summary.txt  centroids_2026-05-18_05-57.json  centroids_2026-05-18_09-36_post.json  centroids_2026-05-18_09-36_pre.json  rerun-summary.txt  verification.md
bench-results/v1-port-history/: README.md
bench-results/v1-port-history/phase-a/: analysis.md  centroids_09-36.json
bench-results/v1-port-history/phase-d/: 09-36_speakers_postfix.json  verification.md
cmake/: embed_assets.cmake  prerequisites.cmake  recmeet-distro.cmake  recmeet-vulkan.cmake  version.cmake
cmake/sherpa-onnx-patches/: 0001-disable-cpu-arena.patch  0002-topkindex-clamp-overflow.patch
docs/: ARCHITECTURE.md  BUILD.md  COMPONENT-DIAGRAMS.html  COMPONENT-DIAGRAMS.md  DEADLOCK-INVESTIGATION.md  DEPLOYMENT-THIN-CLIENT.md  IPC-VERBS.md  IPC-WIRE-PROTOCOL.md  LIVE-CAPTIONING-PLAN.md  MIGRATION.md  ROADMAP.md  V2-DEPLOYMENT.md  V2-STRATEGY.md
docs/history/: DEADLOCK-INVESTIGATION.md
prototype/: recmeet_config.py
scripts/: bench-with-telemetry.sh  build-onnxruntime.sh  check-coverage.sh  check-test-stubs.sh  ci-v2-coexistence-gate.sh  diarize_threshold_analysis.py  smoke.sh
share/icons/hicolor/: index.theme
share/web/: app.js  index.html  style.css
src/: api_models.cpp  api_models.h  audio_capture.cpp  audio_capture.h  audio_file.cpp  audio_file.h  audio_mixer.cpp  audio_mixer.h  audio_monitor.cpp  audio_monitor.h  backend_info.cpp  backend_info.h  caption_engine.cpp  caption_engine.h  caption_format.cpp  caption_format.h  caption_start_channel.cpp  caption_start_channel.h  caption_vtt.cpp  caption_vtt.h  cli.cpp  cli.h  config.cpp  config.h  config_json.cpp  config_json.h  daemon.cpp  daemon_handlers.cpp  daemon_handlers.h  daemon_handlers_internal.h  device_enum.cpp  device_enum.h  diarization_cache.cpp  diarization_cache.h  diarize.cpp  diarize.h  fetch_artifacts.cpp  fetch_artifacts.h  http_client.cpp  http_client.h  (+74 more)
tests/: coverage-baseline.txt  daemon_test_globals.cpp  daemon_test_harness.h  full_stack_helpers.h  streaming_capture_tests.cpp  streaming_engine_tests.cpp  test_admin_verbs_ipc.cpp  test_audio_file.cpp  test_audio_mixer.cpp  test_backend_dl.cpp  test_benchmark.cpp  test_binary_slim.cpp  test_cancel.cpp  test_caption_format.cpp  test_caption_ipc_integration.cpp  test_caption_model_manager.cpp  test_caption_render.cpp  test_caption_vtt.cpp  test_captions_phase_a.cpp  test_captions_phase_b.cpp  test_captions_phase_b3.cpp  test_captions_phase_c.cpp  test_check_backends.cpp  test_cli.cpp  test_config.cpp  test_config_e2_fields.cpp  test_config_json.cpp  test_config_split.cpp  test_device_enum.cpp  test_diarize.cpp  test_e1_legacy_fix.cpp  test_enroll.cpp  test_fetch.cpp  test_full_stack.cpp  test_full_stack_captions.cpp  test_full_stack_captions_paced.cpp  test_full_stack_live.cpp  test_full_stack_note_attempts.cpp  test_full_stack_speaker_id.cpp  test_full_stack_webui.cpp  (+61 more)
tools/: go.mod  go.sum
tools/agent/: config.go  config_test.go  fetch.go  fetch_test.go  loop.go  loop_test.go  search.go  search_test.go  tools.go  tools_test.go  workflows.go  workflows_test.go  writefile.go  writefile_test.go
tools/cmd/recmeet-agent/: dryrun_integration_test.go  errors_integration_test.go  flags_integration_test.go  followup_integration_test.go  help_integration_test.go  helpers_integration_test.go  main.go  misc_integration_test.go  prep_integration_test.go  setup_integration_test.go
tools/cmd/recmeet-docs-html/: main.go
tools/cmd/recmeet-mcp/: errors_integration_test.go  helpers_integration_test.go  lifecycle_integration_test.go  main.go  protocol_integration_test.go  setup_integration_test.go  tools_integration_test.go
tools/mcpserver/: server.go  server_test.go  tools.go  tools_test.go
tools/meetingdata/: actionitems.go  actionitems_test.go  config.go  config_test.go  meetings.go  meetings_test.go  notes.go  notes_test.go  speakers.go  speakers_test.go
tools/meetingdata/testdata/: config.yaml  meeting_full.md  meeting_no_actions.md  meeting_simple.md  speaker_profile.json  speakers.json
tools/testutil/: binary.go  binary_test.go  fixtures.go  fixtures_test.go  mcp_stdio_transport.go  mcp_stdio_transport_test.go  mockanthropic.go  mockanthropic_test.go  usability.go  usability_test.go
